need to fix spacing on text inside of each item

--- a/src/style.css
+++ b/src/style.css
@@ -75,6 +75,7 @@
     border: 2px solid black;
     display: flex;
     align-items: center;
+    gap: 5px;
 }
 
 img {
